--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         const app = initializeApp(firebaseConfig);
         const firestore = getFirestore(app);
         const auth = getAuth(app);
-        window.firebase = { firestore, auth };
+        window.firebase = { app, firestore, auth }; // Expose to global scope
 
         signInAnonymously(auth)
             .then(user => console.log('Authenticated successfully:', user.uid))
@@ -374,7 +374,7 @@
         }
 
         function loadProgrammes() {
-            firebase.firestore.collection('programmes').get().then(snapshot => {
+            window.firebase.firestore.collection('programmes').get().then(snapshot => {
                 console.log('Programmes fetched:', snapshot.size);
                 const programmes = snapshot.docs.map(doc => doc.data());
                 const metadataSelect = document.getElementById('programName');
@@ -406,13 +406,13 @@
                 alert('Error loading programmes. Please try again.');
             });
 
-            firebase.firestore.collection('programmes').onSnapshot(() => {
+            window.firebase.firestore.collection('programmes').onSnapshot(() => {
                 loadProgrammes();
             });
         }
 
         function loadDisks() {
-            firebase.firestore.collection('files').get().then(snapshot => {
+            window.firebase.firestore.collection('files').get().then(snapshot => {
                 console.log('Disks fetched:', snapshot.size);
                 const files = snapshot.docs.map(doc => doc.data());
                 const diskIds = [...new Set(files.map(file => file.diskId))];
@@ -441,13 +441,13 @@
                 return;
             }
 
-            firebase.firestore.collection('programmes').where('name', '==', name.toLowerCase()).get().then(snapshot => {
+            window.firebase.firestore.collection('programmes').where('name', '==', name.toLowerCase()).get().then(snapshot => {
                 if (!snapshot.empty) {
                     alert(`Programme "${name}" already exists.`);
                     return;
                 }
-                const id = firebase.firestore.collection('programmes').doc().id;
-                firebase.firestore.collection('programmes').doc(id).set({ id, name }).then(() => {
+                const id = window.firebase.firestore.collection('programmes').doc().id;
+                window.firebase.firestore.collection('programmes').doc(id).set({ id, name }).then(() => {
                     document.getElementById('newProgramme').value = '';
                     alert(`Programme "${name}" added!`);
                 }).catch(error => {
@@ -470,12 +470,12 @@
                     alert('Please enter a programme name.');
                     return;
                 }
-                firebase.firestore.collection('programmes').where('name', '==', newName.toLowerCase()).get().then(snapshot => {
+                window.firebase.firestore.collection('programmes').where('name', '==', newName.toLowerCase()).get().then(snapshot => {
                     if (!snapshot.empty && snapshot.docs[0].id !== id) {
                         alert(`Programme "${newName}" already exists.`);
                         return;
                     }
-                    firebase.firestore.collection('programmes').doc(id).update({ name: newName }).then(() => {
+                    window.firebase.firestore.collection('programmes').doc(id).update({ name: newName }).then(() => {
                         input.setAttribute('readonly', true);
                         button.textContent = 'Edit';
                         button.className = 'bg-yellow-500 text-white p-2 rounded-lg hover:bg-yellow-600 transition tooltip';
@@ -491,7 +491,7 @@
 
         function deleteProgramme(id) {
             if (!confirm('Are you sure you want to delete this programme?')) return;
-            firebase.firestore.collection('programmes').doc(id).delete().then(() => {
+            window.firebase.firestore.collection('programmes').doc(id).delete().then(() => {
                 alert('Programme deleted!');
             }).catch(error => {
                 console.error('Failed to delete programme:', error);
@@ -537,14 +537,14 @@
 
             const newFiles = [];
             const existingFiles = new Set();
-            firebase.firestore.collection('files').get().then(snapshot => {
+            window.firebase.firestore.collection('files').get().then(snapshot => {
                 snapshot.docs.forEach(doc => existingFiles.add(doc.data().filePath));
                 const nonArchivedFiles = [];
                 currentFiles.forEach((file, index) => {
                     const filePath = file.webkitRelativePath;
                     if (!isExcluded(filePath)) {
                         if (!existingFiles.has(filePath)) {
-                            firebase.firestore.collection('files').doc(sanitizeId(filePath)).set({ filePath, diskId: inputDiskId, metadata: {} })
+                            window.firebase.firestore.collection('files').doc(sanitizeId(filePath)).set({ filePath, diskId: inputDiskId, metadata: {} })
                                 .then(() => console.log('Added file:', filePath))
                                 .catch(error => console.error('Error adding file:', filePath, error));
                             newFiles.push(filePath);
@@ -554,7 +554,7 @@
                     }
                 });
 
-                firebase.firestore.collection('files').where('metadata', '==', {}).get().then(snapshot => {
+                window.firebase.firestore.collection('files').where('metadata', '==', {}).get().then(snapshot => {
                     const displayFiles = nonArchivedFiles
                         .filter(f => snapshot.docs.some(doc => doc.data().filePath === f.filePath))
                         .sort((a, b) => a.filePath.localeCompare(b.filePath, undefined, { sensitivity: 'base' }));
@@ -632,7 +632,7 @@
                 alert('Video file not found. Please reselect the folder containing this file.');
             }
 
-            firebase.firestore.collection('files').doc(sanitizeId(filePath)).get().then(doc => {
+            window.firebase.firestore.collection('files').doc(sanitizeId(filePath)).get().then(doc => {
                 const file = doc.data();
                 if (file && Object.keys(file.metadata).length > 0) {
                     const progName = file.metadata['Name of Programme'] || '';
@@ -701,7 +701,7 @@
                 return;
             }
 
-            firebase.firestore.collection('files').doc(sanitizeId(filePath)).get().then(doc => {
+            window.firebase.firestore.collection('files').doc(sanitizeId(filePath)).get().then(doc => {
                 if (!doc.exists) {
                     alert('File not found!');
                     return;
@@ -714,10 +714,10 @@
                 if (finalProgramName) {
                     metadata['Name of Programme'] = finalProgramName;
                     if (programName === 'Other' && otherProgramme) {
-                        firebase.firestore.collection('programmes').where('name', '==', otherProgramme.toLowerCase()).get().then(snapshot => {
+                        window.firebase.firestore.collection('programmes').where('name', '==', otherProgramme.toLowerCase()).get().then(snapshot => {
                             if (snapshot.empty) {
-                                const id = firebase.firestore.collection('programmes').doc().id;
-                                firebase.firestore.collection('programmes').doc(id).set({ id, name: otherProgramme });
+                                const id = window.firebase.firestore.collection('programmes').doc().id;
+                                window.firebase.firestore.collection('programmes').doc(id).set({ id, name: otherProgramme });
                             }
                         }).catch(error => {
                             console.error('Failed to add new programme:', error);
@@ -738,7 +738,7 @@
                     if (key && value) metadata[key] = value;
                 });
 
-                firebase.firestore.collection('files').doc(sanitizeId(filePath)).update({ metadata }).then(() => {
+                window.firebase.firestore.collection('files').doc(sanitizeId(filePath)).update({ metadata }).then(() => {
                     const videoPlayer = document.getElementById('videoPlayer');
                     if (videoPlayer.src) {
                         URL.revokeObjectURL(videoPlayer.src);
@@ -769,7 +769,7 @@
         }
 
         function loadFiles() {
-            firebase.firestore.collection('files').get().then(snapshot => {
+            window.firebase.firestore.collection('files').get().then(snapshot => {
                 console.log('Files fetched:', snapshot.size, snapshot.docs.map(doc => doc.data()));
                 const files = snapshot.docs.map(doc => doc.data());
                 const tableBody = document.getElementById('fileTable');
@@ -814,7 +814,7 @@
                 alert('Error loading files. Please try again.');
             });
 
-            firebase.firestore.collection('files').onSnapshot(() => {
+            window.firebase.firestore.collection('files').onSnapshot(() => {
                 loadFiles();
             });
         }
@@ -872,7 +872,7 @@
             const searchMetadata = document.getElementById('searchMetadata').value.trim().toLowerCase();
             const searchLogic = document.getElementById('searchLogic').value;
 
-            let query = firebase.firestore.collection('files');
+            let query = window.firebase.firestore.collection('files');
             if (diskId) query = query.where('diskId', '==', diskId);
             if (programName) query = query.where('metadata.Name of Programme', '==', programName);
             if (episodeNumber) query = query.where('metadata.Episode Number', '==', episodeNumber);
@@ -953,7 +953,7 @@
         }
 
         function exportReport() {
-            firebase.firestore.collection('files').get().then(snapshot => {
+            window.firebase.firestore.collection('files').get().then(snapshot => {
                 const files = snapshot.docs.map(doc => doc.data());
                 const filesWithMetadata = files.filter(file => Object.keys(file.metadata).length > 0);
                 
@@ -992,10 +992,10 @@
         function backupData() {
             const backupData = { files: [], programmes: [] };
             Promise.all([
-                firebase.firestore.collection('files').get().then(snapshot => {
+                window.firebase.firestore.collection('files').get().then(snapshot => {
                     backupData.files = snapshot.docs.map(doc => doc.data());
                 }),
-                firebase.firestore.collection('programmes').get().then(snapshot => {
+                window.firebase.firestore.collection('programmes').get().then(snapshot => {
                     backupData.programmes = snapshot.docs.map(doc => doc.data());
                 })
             ]).then(() => {
@@ -1027,16 +1027,16 @@
             reader.onload = function(event) {
                 try {
                     const data = JSON.parse(event.target.result);
-                    const batch = firebase.firestore.batch();
-                    firebase.firestore.collection('files').get().then(snapshot => {
+                    const batch = window.firebase.firestore.batch();
+                    window.firebase.firestore.collection('files').get().then(snapshot => {
                         snapshot.forEach(doc => batch.delete(doc.ref));
                         data.files.forEach(file => {
-                            batch.set(firebase.firestore.collection('files').doc(sanitizeId(file.filePath)), file);
+                            batch.set(window.firebase.firestore.collection('files').doc(sanitizeId(file.filePath)), file);
                         });
-                        firebase.firestore.collection('programmes').get().then(snapshot => {
+                        window.firebase.firestore.collection('programmes').get().then(snapshot => {
                             snapshot.forEach(doc => batch.delete(doc.ref));
                             data.programmes.forEach(prog => {
-                                batch.set(firebase.firestore.collection('programmes').doc(prog.id), prog);
+                                batch.set(window.firebase.firestore.collection('programmes').doc(prog.id), prog);
                             });
                             batch.commit().then(() => {
                                 loadProgrammes();
@@ -1059,41 +1059,50 @@
 
         function checkPassword() {
             const password = document.getElementById('passwordInput').value;
-            if (password === 'securepass') {
-                document.getElementById('passwordPrompt').classList.add('hidden');
-                document.getElementById('mainApp').classList.remove('hidden');
-                firebase.firestore.collection('programmes').get().then(snapshot => {
-                    if (snapshot.empty) {
-                        const defaultProgrammes = ['Stranger Things', 'The Mandalorian', 'FRIENDS', 'Samantharangal'];
-                        const batch = firebase.firestore.batch();
-                        defaultProgrammes.forEach(name => {
-                            const id = firebase.firestore.collection('programmes').doc().id;
-                            batch.set(firebase.firestore.collection('programmes').doc(id), { id, name });
-                        });
-                        batch.commit().then(() => {
+            if (password !== 'securepass') {
+                alert('Incorrect password. Please try again.');
+                return;
+            }
+
+            // Wait for Firebase authentication to complete
+            window.firebase.auth.onAuthStateChanged(user => {
+                if (user) {
+                    console.log('User authenticated:', user.uid);
+                    document.getElementById('passwordPrompt').classList.add('hidden');
+                    document.getElementById('mainApp').classList.remove('hidden');
+
+                    // Initialize data loading after authentication
+                    window.firebase.firestore.collection('programmes').get().then(snapshot => {
+                        if (snapshot.empty) {
+                            const defaultProgrammes = ['Stranger Things', 'The Mandalorian', 'FRIENDS', 'Samantharangal'];
+                            const batch = window.firebase.firestore.batch();
+                            defaultProgrammes.forEach(name => {
+                                const id = window.firebase.firestore.collection('programmes').doc().id;
+                                batch.set(window.firebase.firestore.collection('programmes').doc(id), { id, name });
+                            });
+                            batch.commit().then(() => {
+                                loadProgrammes();
+                                loadFiles();
+                                loadDisks();
+                            }).catch(error => {
+                                console.error('Error initializing default programmes:', error);
+                                alert('Error initializing app. Please try again.');
+                            });
+                        } else {
                             loadProgrammes();
                             loadFiles();
                             loadDisks();
-                        });
-                    } else {
-                        loadProgrammes();
-                        loadFiles();
-                        loadDisks();
-                    }
-                });
-            } else {
-                alert('Incorrect password. Please try again.');
-            }
+                        }
+                    }).catch(error => {
+                        console.error('Error checking programmes:', error);
+                        alert('Error loading app. Please try again.');
+                    });
+                } else {
+                    console.error('No user authenticated.');
+                    alert('Authentication failed. Please try again.');
+                }
+            });
         }
-
-        firebase.auth.onAuthStateChanged(user => {
-            if (user) {
-                console.log('User authenticated:', user.uid);
-            } else {
-                console.error('No user authenticated.');
-                alert('Authentication required. Please try again.');
-            }
-        });
     </script>
 </body>
 </html>
