--- a/index.html
+++ b/index.html
@@ -232,14 +232,14 @@
         import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
         const firebaseConfig = {
-            apiKey: "YOUR_ACTUAL_API_KEY",
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.firebasestorage.app",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID",
-            measurementId: "YOUR_MEASUREMENT_ID"
-        };
+  apiKey: "AIzaSyBd2ymMz7Az97T71xsnP3P2XFjTrxEzruc",
+  authDomain: "video-manager-sync.firebaseapp.com",
+  projectId: "video-manager-sync",
+  storageBucket: "video-manager-sync.firebasestorage.app",
+  messagingSenderId: "772995186320",
+  appId: "1:772995186320:web:42842957d19e780ebea215",
+  measurementId: "G-KZ3C92XLJH"
+};
 
         async function initializeFirebase() {
             try {
