--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
 </head>
 <body class="min-h-screen">
     <div id="passwordPrompt" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center">
-    <div class="bg-white p-6 rounded-lg shadow-md max-w-md w-full">
-        <h2 class="text-xl font-semibold mb-4 text-gray-800">Welcome!</h2>
-        <p class="text-gray-600 mb-4">Enter password to access Video File Manager.</p>
-        <input type="password" id="passwordInput" class="p-2 border rounded-lg w-full mb-4 focus:outline-none focus:ring-2 focus:ring-teal-300" placeholder="Password">
-        <button id="loginButton" onclick="checkPassword()" class="bg-teal-500 text-white p-2 rounded-lg w-full hover:bg-teal-600 transition" disabled>Loading...</button>
+        <div class="bg-white p-6 rounded-lg shadow-md max-w-md w-full">
+            <h2 class="text-xl font-semibold mb-4 text-gray-800">Welcome!</h2>
+            <p class="text-gray-600 mb-4">Enter password to access Video File Manager.</p>
+            <input type="password" id="passwordInput" class="p-2 border rounded-lg w-full mb-4 focus:outline-none focus:ring-2 focus:ring-teal-300" placeholder="Password">
+            <button id="loginButton" onclick="checkPassword()" class="bg-teal-500 text-white p-2 rounded-lg w-full hover:bg-teal-600 transition" disabled>Loading...</button>
+        </div>
     </div>
-</div>
 
     <div id="mainApp" class="container min-h-screen hidden">
+        <!-- [Rest of the HTML remains unchanged: header, nav, main sections, footer, etc.] -->
         <header class="bg-teal-100 rounded-lg shadow-md mb-6">
             <h1 class="text-2xl sm:text-3xl font-bold text-gray-800 text-center">Video File Manager</h1>
             <p class="text-center text-gray-600 text-sm mt-1">Organize, tag, and preview your video files with cloud sync!</p>
@@ -67,7 +68,6 @@
         </nav>
 
         <main class="space-y-6">
-            <!-- Manage Programme Names -->
             <section id="programmesTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md active">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Manage Programme Names</h2>
                 <p class="text-gray-600 text-sm mb-3">Add, edit, or remove programme names for tagging.</p>
@@ -79,14 +79,12 @@
                 <p id="noProgrammesMessage" class="text-gray-600 text-sm mt-3 hidden">No programmes available. Add a programme above to start tagging files.</p>
             </section>
 
-            <!-- Disks List -->
             <section id="disksTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Scanned Disks</h2>
                 <p class="text-gray-600 text-sm mb-3">View all scanned Disk IDs and rescan for new programmes.</p>
                 <div id="diskList" class="grid grid-cols-1 gap-3"></div>
             </section>
 
-            <!-- Select HDD and Scan -->
             <section id="scanTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Select HDD and Scan</h2>
                 <p class="text-gray-600 text-sm mb-3">Choose a folder (including subfolders) and assign a Disk ID.</p>
@@ -100,7 +98,6 @@
                 </div>
             </section>
 
-            <!-- Scanned Files -->
             <section id="scannedTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Scanned Video Files</h2>
                 <p class="text-gray-600 text-sm mb-3">View new video files (without metadata) from selected folder and subfolders, sorted alphabetically.</p>
@@ -117,7 +114,6 @@
                 </div>
             </section>
 
-            <!-- Metadata Editor -->
             <section id="metadataTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Manage Metadata</h2>
                 <p class="text-gray-600 text-sm mb-3">Add or edit metadata while previewing the video. Episode Details are auto-corrected to sentence case on save.</p>
@@ -168,7 +164,6 @@
                 </div>
             </section>
 
-            <!-- Search Files -->
             <section id="searchTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Search Files</h2>
                 <p class="text-gray-600 text-sm mb-3">Find archived files by Disk ID, programme name, episode number, telecast date, or other metadata (e.g., details). Use AND (all criteria must match) or OR (any criterion matches). Results are sorted by programme and episode number.</p>
@@ -189,7 +184,6 @@
                 <input type="file" id="copyDestination" webkitdirectory directory class="hidden">
             </section>
 
-            <!-- Export and Backup -->
             <section id="exportTab" class="tab-content bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Export and Backup</h2>
                 <p class="text-gray-600 text-sm mb-3">Export metadata as CSV, backup data as JSON, or restore from JSON.</p>
@@ -201,7 +195,6 @@
                 </div>
             </section>
 
-            <!-- Archived Files -->
             <section id="results" class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
                 <h2 class="text-xl font-semibold text-gray-800 mb-3">Archived Files</h2>
                 <p class="text-gray-600 text-sm mb-3">View all files with metadata, sorted by programme and episode number. Use Disk ID to locate HDD. Green rows indicate accessible files; red rows indicate missing files (reselect folder).</p>
@@ -227,83 +220,143 @@
     </div>
 
     <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getFirestore, collection, getDocs, doc, setDoc, updateDoc, deleteDoc, onSnapshot, query, where, writeBatch } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-    import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getFirestore, collection, getDocs, doc, setDoc, updateDoc, deleteDoc, onSnapshot, query, where, writeBatch } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-    const firebaseConfig = {
-  apiKey: "AIzaSyBd2ymMz7Az97T71xsnP3P2XFjTrxEzruc",
-  authDomain: "video-manager-sync.firebaseapp.com",
-  projectId: "video-manager-sync",
-  storageBucket: "video-manager-sync.firebasestorage.app",
-  messagingSenderId: "772995186320",
-  appId: "1:772995186320:web:42842957d19e780ebea215",
-  measurementId: "G-KZ3C92XLJH"
-};
-
+        const firebaseConfig = {
+            apiKey: "AIzaSyBd2ymMz7Az97T71xsnP3P2XFjTrxEzruc",
+            authDomain: "video-manager-sync.firebaseapp.com",
+            projectId: "video-manager-sync",
+            storageBucket: "video-manager-sync.firebasestorage.app",
+            messagingSenderId: "772995186320",
+            appId: "1:772995186320:web:42842957d19e780ebea215",
+            measurementId: "G-KZ3C92XLJH"
+        };
 
         // Global promise to track Firebase initialization
-    let firebaseInitialized = null;
+        let firebaseInitialized = null;
 
-    async function initializeFirebase() {
-        try {
-            const app = initializeApp(firebaseConfig);
-            const firestore = getFirestore(app);
-            const auth = getAuth(app);
-            window.firebase = {
-                app,
-                firestore,
-                collection,
-                getDocs,
-                doc,
-                setDoc,
-                updateDoc,
-                deleteDoc,
-                onSnapshot,
-                query,
-                where,
-                writeBatch,
-                auth,
-                signInAnonymously,
-                onAuthStateChanged
-            };
-            console.log('Firebase initialized successfully:', firebaseConfig.projectId);
-            // Enable the Log In button after initialization
-            document.getElementById('loginButton').disabled = false;
-            return { app, firestore, auth };
-        } catch (error) {
-            console.error('Firebase initialization failed:', error);
-            alert('Failed to initialize Firebase. Please check your Firebase configuration and reload the page.');
-            throw error;
-        }
-    }
-
-        async function attemptSignIn(auth, attempt = 1, maxAttempts = 3) {
-        try {
-            const userCredential = await signInAnonymously(auth);
-            console.log('Authenticated successfully:', userCredential.user.uid);
-            return userCredential.user;
-        } catch (error) {
-            console.error(`Authentication attempt ${attempt} failed:`, error);
-            if (attempt < maxAttempts) {
-                console.log(`Retrying authentication (${attempt + 1}/${maxAttempts})...`);
-                await new Promise(resolve => setTimeout(resolve, 1000));
-                return attemptSignIn(auth, attempt + 1, maxAttempts);
-            } else {
-                console.error('Authentication failed after max attempts:', error);
-                alert('Failed to authenticate with Firebase. Please ensure anonymous authentication is enabled and try again.');
+        async function initializeFirebase() {
+            try {
+                const app = initializeApp(firebaseConfig);
+                const firestore = getFirestore(app);
+                const auth = getAuth(app);
+                window.firebase = {
+                    app,
+                    firestore,
+                    collection,
+                    getDocs,
+                    doc,
+                    setDoc,
+                    updateDoc,
+                    deleteDoc,
+                    onSnapshot,
+                    query,
+                    where,
+                    writeBatch,
+                    auth,
+                    signInAnonymously,
+                    onAuthStateChanged
+                };
+                console.log('Firebase initialized successfully:', firebaseConfig.projectId);
+                // Enable the Log In button after initialization
+                document.getElementById('loginButton').disabled = false;
+                document.getElementById('loginButton').textContent = 'Log In';
+                return { app, firestore, auth };
+            } catch (error) {
+                console.error('Firebase initialization failed:', error);
+                alert('Failed to initialize Firebase. Please check your Firebase configuration and reload the page.');
                 throw error;
             }
         }
-    }
+
+        async function attemptSignIn(auth, attempt = 1, maxAttempts = 3) {
+            try {
+                const userCredential = await signInAnonymously(auth);
+                console.log('Authenticated successfully:', userCredential.user.uid);
+                return userCredential.user;
+            } catch (error) {
+                console.error(`Authentication attempt ${attempt} failed:`, error);
+                if (attempt < maxAttempts) {
+                    console.log(`Retrying authentication (${attempt + 1}/${maxAttempts})...`);
+                    await new Promise(resolve => setTimeout(resolve, 1000));
+                    return attemptSignIn(auth, attempt + 1, maxAttempts);
+                } else {
+                    console.error('Authentication failed after max attempts:', error);
+                    alert('Failed to authenticate with Firebase. Please ensure anonymous authentication is enabled and try again.');
+                    throw error;
+                }
+            }
+        }
 
         // Start Firebase initialization and store the promise
-    firebaseInitialized = initializeFirebase().catch(error => {
-        console.error('Initialization failed:', error);
-    });
-</script>
+        firebaseInitialized = initializeFirebase().catch(error => {
+            console.error('Initialization failed:', error);
+            document.getElementById('loginButton').disabled = true;
+            document.getElementById('loginButton').textContent = 'Initialization Failed';
+        });
+    </script>
 
     <script>
+        async function checkPassword() {
+            const password = document.getElementById('passwordInput').value;
+            if (password !== 'securepass') {
+                alert('Incorrect password. Please try again.');
+                return;
+            }
+
+            // Wait for Firebase initialization to complete
+            try {
+                await firebaseInitialized;
+                if (!window.firebase || !window.firebase.firestore || !window.firebase.auth || !window.firebase.onAuthStateChanged) {
+                    console.error('Firebase not initialized properly:', window.firebase);
+                    alert('Firebase is not initialized. Please check Firebase configuration and reload the page.');
+                    return;
+                }
+
+                // Attempt sign-in
+                await attemptSignIn(window.firebase.auth);
+
+                window.firebase.onAuthStateChanged(window.firebase.auth, async user => {
+                    if (user) {
+                        console.log('User authenticated:', user.uid);
+                        document.getElementById('passwordPrompt').classList.add('hidden');
+                        document.getElementById('mainApp').classList.remove('hidden');
+
+                        try {
+                            const snapshot = await window.firebase.getDocs(window.firebase.collection(window.firebase.firestore, 'programmes'));
+                            if (snapshot.empty) {
+                                const defaultProgrammes = ['Stranger Things', 'The Mandalorian', 'FRIENDS', 'Samantharangal'];
+                                const batch = window.firebase.writeBatch(window.firebase.firestore);
+                                defaultProgrammes.forEach(name => {
+                                    const id = window.firebase.doc(window.firebase.collection(window.firebase.firestore, 'programmes')).id;
+                                    batch.set(window.firebase.doc(window.firebase.firestore, 'programmes', id), { id, name });
+                                });
+                                await batch.commit();
+                            }
+                            await loadProgrammes();
+                            await loadFiles();
+                            await loadDisks();
+                        } catch (error) {
+                            console.error('Error loading app data:', error);
+                            alert('Error loading app. Please check Firebase configuration and try again.');
+                        }
+                    } else {
+                        console.error('No user authenticated.');
+                        alert('Authentication failed. Please ensure anonymous authentication is enabled in Firebase Console and try again.');
+                    }
+                }, error => {
+                    console.error('Auth state change error:', error);
+                    alert('Error checking authentication state. Please try again.');
+                });
+            } catch (error) {
+                console.error('Firebase initialization not completed:', error);
+                alert('Firebase initialization failed. Please reload the page and try again.');
+            }
+        }
+
+        // [Rest of the JavaScript remains unchanged: loadProgrammes, loadFiles, addProgramme, etc.]
         const VIDEO_EXTENSIONS = ['.mp4', '.mkv', '.avi', '.mov', '.wmv'];
         const EXCLUDE_PREFIXES = ['.', '$', '~'];
         const EXCLUDE_DIRS = ['/Windows', '/System32', '/dev', '/proc', '/sys', '/boot', '/etc'];
@@ -1142,70 +1195,6 @@
             };
             reader.readAsText(file);
         }
-
-<script>
-    async function checkPassword() {
-        const password = document.getElementById('passwordInput').value;
-        if (password !== 'securepass') {
-            alert('Incorrect password. Please try again.');
-            return;
-        }
-
-           // Wait for Firebase initialization to complete
-        try {
-            await firebaseInitialized;
-            if (!window.firebase || !window.firebase.firestore || !window.firebase.auth || !window.firebase.onAuthStateChanged) {
-                console.error('Firebase not initialized properly:', window.firebase);
-                alert('Firebase is not initialized. Please check Firebase configuration and reload the page.');
-                return;
-            }
-
-            window.firebase.onAuthStateChanged(window.firebase.auth, async user => {
-                if (user) {
-                    console.log('User authenticated:', user.uid);
-                    document.getElementById('passwordPrompt').classList.add('hidden');
-                    document.getElementById('mainApp').classList.remove('hidden');
-
-                    try {
-                        const snapshot = await window.firebase.getDocs(window.firebase.collection(window.firebase.firestore, 'programmes'));
-                        if (snapshot.empty) {
-                            const defaultProgrammes = ['Stranger Things', 'The Mandalorian', 'FRIENDS', 'Samantharangal'];
-                            const batch = window.firebase.writeBatch(window.firebase.firestore);
-                            defaultProgrammes.forEach(name => {
-                                const id = window.firebase.doc(window.firebase.collection(window.firebase.firestore, 'programmes')).id;
-                                batch.set(window.firebase.doc(window.firebase.firestore, 'programmes', id), { id, name });
-                            });
-                            await batch.commit();
-                        }
-                        await loadProgrammes();
-                        await loadFiles();
-                        await loadDisks();
-                    } catch (error) {
-                        console.error('Error loading app data:', error);
-                        alert('Error loading app. Please check Firebase configuration and try again.');
-                    }
-                } else {
-                    console.error('No user authenticated.');
-                    alert('Authentication failed. Please ensure anonymous authentication is enabled in Firebase Console and try again.');
-                }
-            }, error => {
-                console.error('Auth state change error:', error);
-                alert('Error checking authentication state. Please try again.');
-            });
-
-            // Attempt sign-in
-            try {
-                await attemptSignIn(window.firebase.auth);
-            } catch (error) {
-                console.error('Sign-in failed:', error);
-                alert('Failed to sign in. Please try again.');
-            }
-        } catch (error) {
-            console.error('Firebase initialization not completed:', error);
-            alert('Firebase initialization failed. Please reload the page and try again.');
-        }
-    }
-</script>
 
         // XLSX parsing logic
         var gk_isXlsx = false;
